[package]
name = "matrix-conduit-client"
version = "0.1.0"
edition = "2021"

[dependencies]
# Matrix SDK
matrix-sdk = "0.7"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI and utilities
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# URL parsing
url = "2.4"

# Environment variables
dotenv = "0.15"

[[bin]]
name = "matrix-client"
path = "src/main.rs"

[[bin]]
name = "user-setup"
path = "src/user_setup.rs" 